--- a/.gitignore
+++ b/.gitignore
@@ -32,5 +32,5 @@ npm-debug.log
 # we ignore priv/static. You may want to comment
 # this depending on your deployment strategy.
 /priv/static/
-
+node_modules
 .env
